welcome view updated

--- a/app/views/welcome/design.html.erb
+++ b/app/views/welcome/design.html.erb
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Designing Events</title>
+    <title>Avensis 2k16</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
     
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVENSIS 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -104,9 +104,13 @@
                         </div>-->
                         <!--<p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>-->
                         <ul class="about-list">
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Google Doodle</strong> - <em>Have a passion for Designing? Come and design the doodle and the best entries will be sent directly to Google for suggestions and who knows if your doodle gets selected. Also, get a chance to work as an intern with one of the leading start-ups.</em>
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Designing/Google_Doodle.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Google Doodle</strong> - <em><p>Participants will have to choose from a range of themes provided to them. Each theme contains a set of vector elements and some basic designs which the participants have to incorporate in their mini project.</p></em>
+                                <a href="/designing" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
         
                         </ul>
