--- a/app/views/welcome/funncreative.html.erb
+++ b/app/views/welcome/funncreative.html.erb
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FNC Events</title>
+    <title>Avensis 2k16</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
     
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVENSIS 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,8 +81,9 @@
         <div class="overlay">
             <div class="content">
                 <strong><font color="#fcac45", size="7">FUN AND CREATIVE</font></strong>
-				<p class="lead"><font size="4">We take you on a rollercoaster of fun and excitement. The creative tasks that challenge your mental, physical, logical and emotional abilities will inculcate a deep sense of "TO DO ATTITUDE". It consists of ultimate challenge, treasure hunt, food gram, karaoke and many more enthusiastic events.
+                <p class="lead"><font size="4">We take you on a rollercoaster of fun and excitement. The creative tasks that challenge your mental, physical, logical and emotional abilities will inculcate a deep sense of "TO DO ATTITUDE". It consists of ultimate challenge, treasure hunt, food gram, karaoke and many more enthusiastic events.
 </font></p>
+
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
             </div>
         </div>
@@ -103,38 +104,110 @@
                         </div>-->
                         <!--<p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>-->
                         <ul class="about-list">
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Ultimate Challenge</strong> - <em>A mind boggling event comprising of various tasks that inspects your mental and physical strengths.</em>
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Ultimate_Challenge.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Ultimate Challenge</strong> - <em><p>Let your spirits unfurl, passions run high.
+                >Fear is evident but courage emerges through, for courage isn't the absence of fear but the masters of it. The experience is going to grill you more this time for we are going to rip you to your physical as well as mental limits. And we assure the greatest fun of your lives, with all those pre hype events and auditions going around. So rise up and prove your worth, know your limits, test your fears, push your endurance and grip the rewards in between your jaws, away from the ones who don’t deserve it. Just embrace yourselves for the <strong>ULTIMATE CHALLENGE.</strong>
+                </p></em>
+                <a href="/uc" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Enigma : Treasure Hunt</strong> - <em> Event which brings innovative thinkers in the house that is, this event has clues which are supposed to be guessed by the players.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Enigma.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Enigma: Treasure Hunt</strong> - <em> <p>Felony! Mystique! Obscurity!
+                                This event is not just about discovering the hidden treasure, but about experiencing an ultimate mind boggle. It will be enigmatic. It will be ambiguous. You'll face an absolute conundrum.
+                                Ever wondered what it would be like to plan out a mysterious escape? If you're a fan of complete thrill and brain freeze, this event is tailored for you. Get ready to experience the thrill of a breakout and allow the pressure to get to your nerves by becoming a part of ENIGMA, Avensis 2016.
+               </em>
+               <a href="/enigma" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Eat Or Quit </strong> - <em> Food lovers, this is your place to show your talent and be proud after eating anything and everything in bulk.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Ecomaze.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Ecomaze</strong> - <em> <p>Save our world, save our future. With the Delhi government taking air pollution seriously, and putting odd-even rule to save our environment, with that same enthusiasm AVENSIS 2016 presents ECOMAZE. 
+               A series of physical tasks and games which will instil awareness about keeping the environment balanced and still have fun.
+                It consists of a maze to be solved. It is a game of healthy mind and spirit, where the competitors will sweat to get the title of “Ecomazed”. The event will consist exciting and entertaining rounds surely bringing smile to your face.
+                </p></em>
+                <a href="/ecomaze" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Karaoke </strong> - <em>  Don't worry amateur singers you have got some event to get noticed. In this event popular songs are sung by participants through microphone over pre-recorded backing tracks.</em>
+                            
+                            
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Eat_Or_Quit.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Eat Or Quit</strong> - <em>  <p>An amazing game for food lovers! Be ready to play interesting food games and have mouth-watering food. So come along and treat your taste buds with scrumptious food and show everyone your love for food. Oh, and remember, with great power comes great responsibility and with great love for food, comes great vigour to take on our challenges. People who love to eat are best people and if life throws a burger at you, you eat it. And if you think you can pass any hurdle to grab your favourite food then you should surely be a part of this.
+               So here it is, join Eat or Quit, Avensis 2016.
+                </p></em>
+                <a href="/eoq" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Gali sports/ Cue sports</strong> - <em>Hey sports enthusiasts! Relive those memories of playing your favourite games with modified rules.</em>
+                           
+                           
+                           <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Karaoke.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Karaoke</strong> - <em>  <p>Ever been to a karaoke night? If yes, get ready to experience the best karaoke event ever and if not , guys you have landed at the perfect doorway.
+                Avensis 2016 brings to you its only cultural event, the first time ever, KARAOKE with never ending fun, frolic and enjoyment. It is a form of interactive entertainment wherein you sing your heart out and the best part is you don't need to be a good singer.
+                Show the world and be a part of the much awaited event KARAOKE 
+                </p></em>
+                <a href="/karaoke" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> VigyaFun</strong> - <em> Vigya Fun is all about quizzes and creation of advertisements that attract participants.</em>
+                            
+                            
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Gali_Sports.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Gali Sports</strong> - <em> <p>Gear up people and get ready to be enthralled by the splendid array of sports offered in Avensis 2016.
+               From classy pool to swift table tennis. From evergreen cricket to vigorous tug-of-war.
+                </p>
+                <p>And last but not the least, the games that make people groove - football and basketball. So get in to score some stunning goals and shoot some fiery hoops! 
+                </p>
+                <p>Get in the arena and lose yourself! 
+                </p></em>
+                <a href="/galisports" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Ecomaze</strong> - <em> Questions related to our pretty nature and mother Earth are asked with some rejuvenating tasks. </em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Movielicious.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong> Movielicious</strong> - <em> <p>This event is ALL ABOUT ENTERTAINMENT. From an unpretentious and fascinating theme, the event is going to bedazzle everyone. With the surety of being a blockbuster, it is a CRAZY combination of Dare, Dance, and Drama that is amusing just like a BOLLYWOOD MOVIE. Participants will be fighting for proving their craze for movies, crossing every limit that are put before them. From ACTION to DANCE, & MUSIC to DRAMA, this enjoyable event will be very intriguing to everyone. So fasten those seatbelts, because there will be no RETAKES in this CLIMAX. ROLL with us in this absorbing cinematic adventure in AVENSIS 2016.</p></em>
+                                <a href="/movielicious" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Laser trap</strong> - <em>We all are trapped in vicious circle of life but in this task players are self-explanatory if they stuck in the wired web.</em>
+                            
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="FNC/Laser_Trap.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Laser Trap</strong> - <em>   <p>It sounds simple still it's hard to conquer. The mastery in the most basic skill ‘focus’, and that is what it requires. 
+                </p>
+                <p>Its dark but the lights will still guide you. Follow them to reach your destiny, do watch out on your timing as it’s the most precious thing you have got, there are going to be stages which cannot be accomplished alone, so have faith in your partner.
+                It will be confusing. It will be treacherous. It will be real fun. Get ready to beat the beam.
+                Become a part of Laser trap, Avensis 2016.
+                </p></em>
+                <a href="/lasertrap" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
+                            
                         </ul>
                     <!--</div>
                 </div>-->
