--- a/app/views/welcome/quiz.html.erb
+++ b/app/views/welcome/quiz.html.erb
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Quizzes Events</title>
+    <title>Avensis 2k16</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
     
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVENSIS 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,8 +80,8 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">QUIZZES </font></strong>
-				<p class="lead"><font size="4">Avensis 2016 in a association with MSIT Quiz Society brings to you two full-days of Quizzing Extravaganza. Ranging a wide domain of quizzes including General, India, Delhi, Biz-tech and Entertainment, we assure you are gonna regret missing this. So, get ready to put your grey cells to good use and adrenaline levels to a new high as we dive into this maiden endeavour of ours.
+                <strong><font color="#fcac45", size="7">QUIZZES</font></strong>
+                <p class="lead"><font size="4">Avensis 2016 in a association with MSIT Quiz Society brings to you two full-days of Quizzing Extravaganza. Ranging a wide domain of quizzes including General, India, Delhi, Biz-tech and Entertainment, we assure you are gonna regret missing this. So, get ready to put your grey cells to good use and adrenaline levels to a new high as we dive into this maiden endeavour of ours.
 </font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
             </div>
@@ -103,36 +103,54 @@
                         </div>-->
                         <!--<p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>-->
                         <ul class="about-list">
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> General Quiz</strong> - <em>You may think you know a lot, but to a layman what you speak is what you know. 
-For all the quizzers/obnoxious-know-it-all/trivia-hungry-folks out there, we bring to you the General Quiz, covering a whole wide range of topics from around the world. Much funfair and a plethora of awesome trivia awaits.
-</em>
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Quizzes/Biz-Tech_Quiz.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Biz-Tech Quiz</strong> - <em>If you are a tech-savvy geek as well as into brands and companies, then this is something you cannot miss. For all the technophiles and business lovers, we present to you the BizTech Quiz - anything and everything related to the world of Business and Technology in a quiz.</em>
+                                    <a href="/biztechquiz" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> India Quiz</strong> - <em>Think you know everything about भारत? Vedas, Mahabharata, Mughals, Marathas, Freedom Fighters, Politicians…you know them all?
-Well let’s just say you’ve barely scraped the surface. Join us as we take you through an incredible journey of our motherland. 
-</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Quizzes/Delhi_Quiz.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Delhi Quiz</strong> - <em>Some say, Delhi is a city of migrants. Everyone who stepped on this soil, brought his own culture. The amalgamation of hundreds of cultures gave birth to a new modern society, with its own style and aura. Join us as we dive deep into some lesser-known, amazing facts about our city which contributed to its history in their own manner and shaped up the modern day society as it is now.</em>
+                                    <a href="/delhiquiz" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Biz-Tech Quiz</strong> - <em>If you are a tech-savvy geek as well as into brands and companies, then this is something you cannot miss. 
-For all the technophiles and business lovers, we present to you the BizTech Quiz - anything and everything related to the world of Business and Technology in a quiz.
-</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Quizzes/Entertainent_Quiz.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Entertainment Quiz</strong> - <em>Are you a movie buff, an audiophile? Binge TV series till your eyes pop-out? Spend more time on YouTube than most? Are you the friend who is asked for recommendations when it comes to movies, TV series and music? If YES, then this is the right place for you. Join us as we delve into a quiz that encompasses all aspects of the Entertainment industry around the globe.</em>
+                                    <a href="/entquiz" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Entertainment Quiz</strong> - <em>Are you a movie buff, an audiophile? Binge TV series till your eyes pop-out? Spend more time on YouTube than most?
-Are you the friend who is asked for recommendations when it comes to movies, TV series and music?
-If YES, then this is the right place for you. Join us as we delve into a quiz that encompasses all aspects of the Entertainment industry around the globe.
-</em>
+                            
+                            
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Quizzes/General_Quiz.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>General Quiz</strong> - <em><p>You may think you know a lot, but to a layman what you speak is what you know. For all the quizzers/obnoxious-know-it-alls/trivia-hungry-folks out there, we bring to you the General Quiz, covering a whole wide range of topics from around the world. Much funfair and a plethora of awesome trivia awaits.</p></em>
+                                    <a href="/generalquiz" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Delhi Quiz</strong> - <em>Some say, Delhi is a city of migrants. Everyone, who stepped on this soil, brought his own culture. The amalgamation of hundreds of cultures gave birth to a new modern society, with its own style and system. Join us as we dive deep into some lesser-known, amazing facts about our city which contributed to its history in their own manner and shaped up the modern day society as it is now.
-</em>
-                            </li>
+                           
+                           
+                           <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Quizzes/India_Quiz.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>India Quiz</strong> - <em><p>Think you know everything about भारत? Vedas, Mahabharata, Mughals, Marathas, Freedom Fighters, Politicians…you know them all? Well let’s just say you’ve barely scraped the surface. Join us as we take you through an incredible journey of our motherland.</p></em>
+                                    <a href="/indiaquiz" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
+                            </li>                           
                         </ul>
                     <!--</div>
                 </div>-->
