--- a/app/views/welcome/robotics.html.erb
+++ b/app/views/welcome/robotics.html.erb
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robotics Events</title>
+    <title>Avensis 2k16</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
     
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVENSIS 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +81,7 @@
         <div class="overlay">
             <div class="content">
                 <strong><font color="#fcac45", size="7">ROBOTICS</font></strong>
-				<p class="lead"><font size="4">Robotics, as known, remains the most exciting part of AVENSIS every year and this year too we are working to make it huge and thrilling.
+                <p class="lead"><font size="4">Robotics, as known, remains the most exciting part of AVENSIS every year and this year too we are working to make it huge and thrilling.
 </font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
             </div>
@@ -103,30 +103,65 @@
                         </div>-->
                         <!--<p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>-->
                         <ul class="about-list">
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Robowar</strong> - <em> Robowar is the event with amazing finishing attacks and the nuts and bolts flying over the ring in stunning live action. Mighty bots battle out as the arena is set ablaze, as we put the best against best. Let your fantasy become reality and showcase your skill in our event Robowar.</em>
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/Carnage.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Carnage</strong> - <em><p>The most awaited event of Avensis is back with a bang & this time it is more challenging, more nail biting and most important…more CARNAGE… It’s a game of strategy; it’s a game of control…Oh wait!!! It’s not a game…it’s a battle…
+Of you versus time, you versus others, you versus that conscience that screams in unanimousvoice to give up and leave… <br/>So pick up the tools, build your grey matter and fight…fight to prove your worth, fight to prove your mettle. Many appear in the battle but there’s gonna be just 1 winner, just 1 team in the end who’ll be standing tall in the end over the others.</p> </em>
+                                    <a href="/carnage" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Robo Rugby</strong> - <em> Robo Rugby is the event of bots and balls. Pick the ball and collect the points by putting it in defined goals. Clear all the stages.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/Junkyard.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Junkyard</strong> - <em><p>Junkyard Wars is the perfect amalgamation of the innovation and critical skills inside you. So tie your laces and hop on to the event to put your engineering theories into practice, to test your problem solving skills, tolerance and creativity and also get ready to work with piles of junk and get all dirty and greasy. Inspired by a real life incident, Junkyard Wars will test your ability to make use of every resource available in an optimized manner under the given time constraint. The participants will have to apply innovative ideas and feasible solutions of the given real life problems to design the mechanism from the given scrap and have to complete the task in required time limit.<br/>In these competitions, multiple teams build a device for use in a competition out of raw materials within a time limit. This sort of competition requires quick thinking and teamwork, and so is a great way to demonstrate an engineer's abilities.</p></em>
+                                    <a href="/junkyard" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Carnage </strong> - <em> Carnage, the event of hurdles, and no doubt the most thrilling event of the fest. The bot has to reach to the end point, crossing all the hurdles though out the designed path. Bot taking minimum time wins the race.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/LFR.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>L.F.R.</strong> - <em><p>LFR is an event in which an autonomous robot is made which is capable of following a line. The autonomous robot will begin its run from a predefined position in a dark isolated room. It will follow the line strip beneath it and will cover the track. The objective of a line follower is to find its path through the predefined end point  in least possible time with accuracy.</p></em>
+                                   <a href="/lfr" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> LFR </strong> - <em> LFR (Line Following Robot) is the time based event. Give the brains to the bots to discover the tracks, where there autonomous powers are checked till the very zenith. Bot reaching the end point in minimum time, following the line is the winner.</em>
+                            
+                            
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/Robo_Maze.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Robo Maze</strong> - <em><p>Robo Maze is a challenge. A challenge to design autonomous robots that compete to solve a maze. These robots have to be intelligent enough to themselves find a way out of the maze and cannot be controlled remotely.  The robots will encounter many obstacles in its way. Only the most intelligently programmed robot will make it to the end in time to become the winner. Overcome the obstacles and be fast as to leave your competition behind.</p></em>
+                                     <a href="/robomaze" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Robo Maze </strong> - <em>Solve the maze, code the bot to reach the end point in minimum time to be the winner. Prepare to get amazed as you guide your bots through the twisted turns and tracks, to test the intuitive skills of your bot.</em>
-                            </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong> Junkyard</strong> - <em> It’s an opportunity to use all of yours engineering prowess and intellect to create machines to battle out. Junkyard Wars is an event where challengers will build a working model from junk provided to them.</em>
-                            </li>
+                           
+                           
+                           <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/Robo_Rugby.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Robo Rugby</strong> - <em><p>It’s a game of bots where your MANUALLY CONTROLLED BOTS will compete to score points and cover the arena by moving the balls across the track to the finish line. Drive your bots from a series of hurdles in a fabulous arena with ball as your prop and see how your controlling skills are and how efficiently you can control your bot to score, win points and be quick enough to beat the others. Be the CHAMPION because it’s the winner who takes it all.</p></em>
+                                    <a href="/roborugby" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
+                            </li>       
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Robotics/Robowar.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Robowar</strong> - <em><p>RoboWars is a competition in which two or more robots fight to win. The last robot standing wins. It will be savage. It will be treacherous. Clash of Metals with the alloys grinding red hot. It is a game of style, control, damage and aggression with the robots pit against each other in a deadly combat. These warriors shall duel for honour and loyalty in an arena of destructions with their pneumatic spikes, flipping tusks, angle grinders, hurling maces, hydraulic pincers and lots more. It is time to concentrate on the hacking and slashing of the robots. Now it is time to rumble. It's the Grand Finale of war. Get ready to feel the chills and shivers down your spine and become a part of Robowar, Avensis2015-16.</p></em>
+                                    <a href="/robowar" type="button" class="btn btn-primary">View Event</a>  
+                                </div></div>
+                            </li>   
                         </ul>
                     <!--</div>
                 </div>-->
@@ -170,3 +205,6 @@
 
   </body>
 </html>
+
+
+<a href="#" type="button" class="btn btn-Primary">Primary</a>
