--- a/app/views/welcome/technical.html.erb
+++ b/app/views/welcome/technical.html.erb
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Technical Events</title>
+    <title>Avensis 2k16</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
     
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">AVENSIS 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +81,7 @@
         <div class="overlay">
             <div class="content">
                 <strong><font color="#fcac45", size="7">TECHNICAL</font></strong>
-				<p class="lead"><font size="4">Avensis being a technical fest hosts a series of technical events which see a huge participation every 
+                <p class="lead"><font size="4">Avensis being a technical fest hosts a series of technical events which see a huge participation every 
 
 year. Starting from the online coding events to events like hackathon, AlgoJam and Techvilla are 
 
@@ -111,42 +111,90 @@ list of all the technical events that are being held for Avensis 2016.
                         </div>-->
                         <!--<p class="intro">We love building and rebuilding brands through our  specific skills. Using colour, fonts, and illustration, we brand companies in a way they will never forget.</p>-->
                         <ul class="about-list">
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Anonymous - Security Based Event</strong> - <em>So you think you can hack? Here is the ultimate challenge for you to show your hacking skills to all by cracking the challenges given to you. Amazing prizes and goodies to be won.</em>
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Anonymous.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Anonymous - Security Based Event</strong> - <em><p>“There are only two types of people in the world, one who know that they’ve been hacked the other who do not”. For all the security enthusiasts, we bring you for the first time ANONYMOUS – a CTF event covering a wide range of security concepts including Cryptography, Website Security and many more topics. So, hack your way to the top and take home some cool prizes!</p></em>
+                                <a href="/anonymous" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Hackathon</strong> - <em>An online hackathon event wherein you will have to build your app based on a theme given by us but chosen by you. Great prizes to be won here.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Hackathon.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Hackathon</strong> - <em><p>Inviting all the web,mobile app developers and designers for the hackathon event. To make a useable app in the given time. Work together in teams to make an app which has good UI/UX and solves a problem faced by many people.</p></em>
+                                <a href="/hackathon" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-                            <li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Encoded Beans</strong> - <em>Show off your knowledge about JAVA. Answer, solve, create applications and win exciting prizes.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Encoded_Beans.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Encoded Beans</strong> - <em><p>Java is easy! Isn’t it? If you are up to a challenge, then just play along! Test your programming skills in Java and win some exciting prizes! Quickly form your mighty team and come accept the challenge! Lead your team through our challenge consisting of 3 Rounds, defeating other teams and proclaim your prize while just coding! Start the challenge now and have a chance to proceed directly to Round 2! For more info, see below.  </p> </em>
+                                <a href="/encodedbeans" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Code Till You Die</strong> - <em>Love to code? Then code till you die. Code in your favourite language and make it to the final round to win exciting prizes.</em>
+                            
+                            
+                             <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Algojam.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Algojam</strong> - <em><p>At Algojam participants work on Algorithms that is their output and efficiency and they do so in a very short time. It’s been planned to organize a team event with maximum of 3 candidates per team.
+The participants have the opportunity to learn new skills, or to put newly acquired skills to work. This event is represented by GDG team.</p></em>
+<a href="/algojam" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>AlgoJam - GDG</strong> - <em>Designing Algorithms require a special brain and here is the chance to show that brain in you. Design, implement and crack the event to win exciting prizes.</em>
+                           
+                           
+                           <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Android_Gaming.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Android Gaming</strong> - <em><p>Do you love playing Mobile Games? Are you a Gamer? If Yes, then you’re at the Right Place!</p></em>
+                                <a href="/androidgaming" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Brainstorm</strong> - <em>Are you ready to storm your brain to break all the levels ? Log on to the brainstorm website and start cracking the quizzes.</em>
+                            
+                            
+                            
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Lan_Gaming.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>LAN Gaming</strong> - <em><p>LAN gaming is a multiplayer gaming event. It is a temporary gathering of people with computers or compatible game consoles, between which they establish a local area network, primarily for the purpose of playing multi player video games.</p></em>
+                                <a href="/langaming" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Techvilla</strong> - <em>Write a Research Paper. Come and present it at our event and you might get a chance to get it published with one of the famous publishers.</em>
+                            
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Online_Coding.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Online Coding</strong> - <em><p>Programming is not a rocket science. It needs time, persistence and efforts to master. All you need is a Computer and an Internet Connection. Let's get ready to solve the real world problems by your programming skills.</p></em>
+                                <a href="/onlinecoding" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>LAN Gaming</strong> - <em>FIFA, NFS, CS, COD, DOTA. Crazy for these games? Then Avensis is for you. Show your gaming skills and get a chance to win great prizes.</em>
+                            
+                            
+                            <li><div class="row" style="margin:1em">
+                                <div class="col-md-4" style="width:1300; height:200; position:relative; ">
+                                <img src="Technical/Techvilla.png" height="200" width="300">
+                                </div>
+                                <div class="col-md-8" ><strong>Techvilla</strong> - <em><p>Techvilla is an event which is for all those who have written any research paper or made any wonderful app or any working model .This event provides you with an excellent opportunity to test your presentation skills and your knowledge regarding your research paper, app or model.</p></em>
+                                <a href="/techvilla" type="button" class="btn btn-primary">View Event</a>
+                                </div></div>
                             </li>
-							<li>
-                                <span class="fa fa-dot-circle-o"></span>
-                                <strong>Android Gaming</strong> - <em>Got great scores in Android Games and you think you can compete? Come and compete with many people and take away more than leadership score!! Great prizes to be won!</em>
-                            </li>
+                            
                         </ul>
                     <!--</div>
                 </div>-->
